--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev.start": "node devStart.js"
+    "start": "node dist/index.js",
+    "dev.start": "node devStart.js",
+    "debug": "node --inspect dist/index.js",
+    "dev.debug": "node devDebug.js"
   },
   "keywords": [],
   "author": "",
