--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "keywords": [],
   "author": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.4",
     "concurrently": "^5.1.0",
     "nodemon": "^2.0.2",
